      HAVE_MALLOC_GOOD_SIZE or HAVE_MALLOC_USABLE_SIZE.
    - Make the openbsd malloc code use 8k pages on alpha CPUs and 16k pages
      on ia64.  Bugfix on 0.2.0.x.
    - Detect mismatched page sizes when using --enable-openbsd-malloc.
      Bugfix on 0.2.0.x.
    - Stop giving double-close warn when we reject an address for client DNS.

  o Minor features:
    - Allow separate log levels to be configured for different logging
      domains.  For example, this allows one to log all notices, warnings, or
      errors, plus all memory management messages of level debug or higher,
      with: Log [MM] debug-err [*] notice-err file /var/log/tor.
    - Add a malloc_good_size implementation to OpenBSD_malloc_linux.c,
      to avoid unused RAM in buffer chunks and memory pools.
    - Downgrade "sslv3 alert handshake failure" message to INFO.
    - Only log guard node status when guard node status has changed.
    - Downgrade the 3 most common "INFO" messages to "DEBUG".  This will make
      "INFO" 75% less verbose.

  o Code simplifications and refactoring:
    - Refactor code using connection_ap_handshake_attach_circuit() to
      allow that function to mark connections for close.  Part of a fix for
      bug 617.  Bugfix on 0.2.0.1-alpha.


Changes in version 0.2.0.21-rc - 2008-03-02
  o Major bugfixes:
    - The control port should declare that it requires password auth
      when HashedControlSessionPassword is set too. Patch from Matt Edman;
      bugfix on 0.2.0.20-rc. Fixes bug 615.
    - Downgrade assert in connection_buckets_decrement() to a log message.
      This may help us solve bug 614, and in any case will make its
      symptoms less severe. Bugfix on 0.2.0.20-rc. Reported by fredzupy.
    - We were sometimes miscounting the number of bytes read from the
      network, causing our rate limiting to not be followed exactly.
      Bugfix on 0.2.0.16-alpha. Reported by lodger.

  o Minor bugfixes: